--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,3 @@
-h1,
-h2,
-h3,
-ul,
-li,
-p {
-  margin: 0;
-  padding: 0;
-}
 /* -------------variables------------- */
 :root {
   --main-text-color: #212121;
@@ -20,12 +11,37 @@ body {
   background-color: #ffffff;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
 img {
   display: block;
 }
 
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+
 .list {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .container {
@@ -45,7 +61,6 @@ img {
 .navigation {
   display: flex;
   align-items: center;
-  height: 80px;
 }
 
 /* logo */
@@ -140,14 +155,13 @@ img {
 /* hero */
 .hero {
   background-color: #2f303a;
-  padding-bottom: 0px;
+  padding: 200px 0px;
 }
 
 .hero-content {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 106px 0px 200px 0px;
 }
 
 .hero h1 {
@@ -158,7 +172,7 @@ img {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #ffffff;
-  max-width: 700px;
+  width: 696px;
   margin-bottom: 30px;
 }
 
@@ -206,6 +220,10 @@ img {
 .benefits-list {
   display: flex;
 }
+
+.benefits-point {
+  width: 270px;
+}
 .benefits-point + .benefits-point {
   margin-left: 30px;
 }
@@ -220,7 +238,7 @@ img {
   padding-top: 0px;
 }
 
-.whatwedo h2 {
+.whatwedo-head {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
@@ -230,14 +248,14 @@ img {
 
 /* team */
 .team {
-  background: #f5f4fa;
+  background-color: #f5f4fa;
 }
 
 .team-list {
   display: flex;
   justify-content: space-between;
 }
-.team h2 {
+.team-head {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
@@ -246,26 +264,28 @@ img {
   margin-bottom: 50px;
 }
 
-.team h3 {
+.team-name {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
   letter-spacing: 0.03em;
-  margin-top: 26px;
   margin-bottom: 10px;
 }
 
-.team p {
+.team-prof {
   font-size: 16px;
   line-height: 1.18;
   letter-spacing: 0.03em;
   color: var(--sub-text-color);
-  margin-bottom: 30px;
 }
 
 .team-point {
   text-align: center;
-  background: #ffffff;
+  background-color: #ffffff;
+}
+
+.team-wrap {
+  padding: 30px 10px;
 }
 /* --------------Page 2---------------- */
 
@@ -273,7 +293,7 @@ img {
 .filter {
   display: flex;
   justify-content: center;
-  margin-bottom: 56px;
+  margin-bottom: 50px;
 }
 
 .btn {
@@ -311,24 +331,22 @@ img {
 .product-text {
   border: 1px solid #eeeeee;
   border-top: none;
+  padding: 20px 24px;
 }
 
-.products p {
+.product-thing {
   color: var(--sub-text-color);
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
-  margin-left: 24px;
-  margin-bottom: 20px;
 }
 
-.products h2 {
+.product-name {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
-  padding-top: 20px;
-  margin-left: 24px;
+  margin-bottom: 4px;
 }
 
 /* --------------Footer---------------- */
